testsuite/tests/invalid_syntax/w_project/test.gpr
project Test is
   for Source_Dirs use (".");
   for Object_Dir use ".";
   for Exec_dir use ".";
   for Main use ("test.adb");
end Test;
